@@ -160,6 +160,7 @@ Version 1.5.0+svn:
    * Fix various rendering bugs in 8bpp display mode.
    * fix bug #11630 (preventing redo and rename during opponent's turn).
    * fix a regression about missing default portrait in dialogs.
+   * fix false move-cursor around enemies after some dialog events.
 
 Version 1.5.0:
  * campaigns:
